# quant-research-engine

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
analysis/: _roll12m_tmp.py  _vol_bins_diag_tmp.py  _vol_diag_tmp.py  gate_debug.py  gating_compare_v4.py  gating_compare_v5.py  gating_compare_v6.py  gating_compare_v6_block_mc.py  gating_master_summary.py  gating_v6_master_summary.py  mc_master_summary.py  monte_carlo_robustness.py  roll12m.py  window_sweep.py
artifacts/: regime_fx_thresholds__eurusd_m5__2022_2024__p30_p70.json
configs/: execution_policies.yaml  regime_fx.yaml  run_anchor_bracket_thr_10p.yaml  run_anchor_bracket_thr_6p.yaml  run_anchor_bracket_thr_8p.yaml  run_anchor_mr.yaml  run_anchor_mr_pure_thr_8p.yaml  run_anchor_mr_pure_thr_8p__strict_no_eof.yaml  run_anchor_thr_10p.yaml  run_anchor_thr_6p.yaml  run_anchor_thr_8p.yaml  run_eurusd_m5_anchor_reversion_no_bracket.yaml  run_eurusd_m5_regime.yaml  run_eurusd_wf_2022_2024.yaml  run_example.yaml  run_example_wf.yaml  run_example_wf_delay0_eof200.yaml  run_example_wf_delay3.yaml  run_example_wf_delay3_eof200.yaml  run_example_wf_delay5.yaml  run_example_wf_delay5_eof200.yaml  run_example_wf_delay8.yaml  run_example_wf_delay8_eof200.yaml  run_nyomv2_eurusd_wf.yaml  run_nyomv2_gbpusd_wf.yaml  run_nyomv2_usdjpy_wf.yaml
data/: data_registry.yaml  example_bars.csv
docs/: ARCHITECTURE.md  BASELINES.md  dataset_contract.md
research/: shock_outcome_matrix_v1.py  shock_outcome_matrix_v3_features.py
scripts/: analyze_ny_opening_momentum_v2_regimes.py  analyze_nyomv2_wf_regimes.py  (+24 more)
(+315 files in other folders)
